// Messages inserted into the slaves's paxos logs
// TODO: have a paxos_tablet.proto file, containing all proto definitions
// for reading and writing.

syntax = "proto3";

import "common.proto";

package proto.paxos.slave;

message KeySpaceChanged {
  repeated proto.common.KeySpaceRange new_ranges = 1;
  uint32 generation = 2;
}
